# Ros_Workshop

./: README.md
catkin_ws/devel/: .catkin  setup.sh
catkin_ws/devel/lib/pkgconfig/: pkg_1.pc
catkin_ws/devel/share/pkg_1/cmake/: pkg_1Config.cmake
catkin_ws/src/pkg_1/: CMakeLists.txt  package.xml
catkin_ws/src/pkg_1/launch/: launchme.launch
catkin_ws/src/pkg_1/scripts/: pubandsub.py  publisher.py  subscriber.py
